FIX : notice-box(yuristrap), quick-bar design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 				<p class="info-desc my-kakao"><span class="desc-icon">{% octicon comment height:16 %}</span>{{ site.kakao_id }}</p>
 			</div>
 			<div class="col-md-4 my-link dsp-flex justify-center">
-				<button class="btn icons" onclick='document.location.href="https://github.com/{{ site.github_username }}"'>
+				<button class="btn btn-transparent icons" onclick='document.location.href="https://github.com/{{ site.github_username }}"'>
 					{% octicon mark-github height:32 %}
 				</button>
 			</div>
