--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -196,7 +196,7 @@
 		margin-top: 150px;
 		@include media("(max-width: 992px)") {
 			margin-top: 5px;
-			padding: 20px 10px 20px 10px;
+			padding: 20px 0px 20px 0px;
 		}
 	}
 
@@ -268,12 +268,18 @@
 	}
 	.quick-bar {
 		position: fixed;
-		// margin-top: 100px;
 		top: 250px;
 		margin-left: -200px;
 		z-index: 101;
+		@include media("(max-width: 1201px)") {
+			margin-left: -110px;
+		}
+		@include media("(max-width: 992px)") {
+			display: none;
+		}
 		&.hide {
 			opacity: 0;
+			pointer-events: none;
 		}
 		&.show {
 			opacity: 1;
