FIX : Threejs draw code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Google Auth -->
 	<meta name="google-site-verification" content="CPBHSXOcqx3RLJ-Pn1Vr34l30UqV46HXj7Et7LsCM7U" />
+	<!-- Naver Auth -->
+    <meta name="naver-site-verification" content="32b3ee031edf2f6c12c44c12006d46b903de6110" />
     {%- seo -%}
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
     <!-- <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}"> -->
