--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,6 +37,42 @@ var app = new Vue({
 		logs: [
 			{
 				position: 'RIGHT',
+				year: 2022,
+				title: 'Lostwak',
+				content: '팬게임으로 제작한 MORPG 게임입니다.\n54시간 서버를 운영하면서 평균 동시접속자 35명과 1745명의 가입이 있었습니다. 게임 클라이언트 뿐만이 아니라 게임 서버, DB 서버, 웹 등 저의 모든 지식을 뭉쳐 만들어 뜻깊습니다.',
+				orgLink: 'https://github.com/lostwak',
+				img: 'https://avatars.githubusercontent.com/u/121059024?s=200&v=4',
+				repos: [
+					{
+						name: '웹 사이트',
+						url: 'https://lostwak.github.io/'
+					},
+					{
+						name: '플레이 영상',
+						url: 'https://youtu.be/bssHujvUd3o'
+					}
+				]
+			},
+			{
+				position: 'LEFT',
+				year: 2022,
+				title: 'Scribubble',
+				content: 'J2KB 5기에 참가하면서 진행하게 되었던 프로젝트입니다.\n웹과 가상 3D 공간에 여러 사람이 낙서를 통해 생각을 공유해주는 서비스입니다. THREE.js 와 Preact 를 처음 사용해보았습니다.',
+				orgLink: 'https://github.com/DailyGreen',
+				img: 'https://avatars.githubusercontent.com/u/94457198?s=200&v=4',
+				repos: [
+					{
+						name: 'Repo',
+						url: 'https://github.com/scribubble/scribubble'
+					},
+					{
+						name: 'Scribubble',
+						url: 'https://d1bsmwli3pnvxm.cloudfront.net/'
+					}
+				]
+			},
+			{
+				position: 'RIGHT',
 				year: 2021,
 				title: 'DailyGreen',
 				content: '깃허브 잔디밭을 원동력삼아 매일 개발하며 공부하자를 모티브로 모인 개발 단체입니다. 제작하며 공부하는것을 즐거움으로 어기고 서로 배운것을 공유합니다. (2018 ~ )',
