Pinned Repository 추가

--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -87,7 +87,7 @@ code {
     font-size: $code-size;
     font-family: 'SFMono-Light', sans-serif;
     font-weight: $notosans-thin;
-	background-color: $code-bg-color;
+	// background-color: $code-bg-color;
 	border-radius: 5px;
 	white-space: pre;
 }
