--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,86 +1,72 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
-{% assign recentPostArray = site.categories.Lib | concat: site.categories.Tech  | sort: 'date' | reverse %}
-{% assign projectPostArray = site.categories.Games | concat: site.categories.App | concat: site.categories.Web  | sort: 'date' | reverse %}
+  {%- include head.html -%}
 
-<div class="home">
-	<h2 class="home-subtitle">👀 최근 포스트</h2>
-	{%- if recentPostArray.size > 0 -%}
-	<ul class="post-list">
+  <body>
 
-		<div class="row">
-			{%- for post in recentPostArray limit:6 -%}
-			<li class="post-part col-lg-6">
-				<div class="post-info post-card" onclick='document.location.href="{{ post.url | relative_url }}"'>
-					<div class="card">
-						<div class="card-img-top">
-							<img class="card-img-top card-img" src="/assets/img/head-img/{{ post.headerImg }}"/>
-						</div>
-						<div class="card-body">
-							<p class="post-category p-name" itemprop="name headline">
-								{%- if post.categories[0] == 'Lib' or post.categories[0] == 'Dev' or post.categories[0] == 'Tech' -%}
-									<a href="/DevNote">개발노트</a> / {{ post.categories[0] }}
-								{%- elsif post.categories[0] == 'Games' or post.categories[0] == 'Web' -%}
-									<a href="/Project">프로젝트</a> / {{ post.categories[0] }}
-								{%- else -%}
-									/ {{ post.categories[0] }}
-								{%- endif -%}
-							</p>
-							<p class="post-title p-name" itemprop="name headline">{{ post.title | escape }}</p>
-							<p class="post-subtitle p-name" itemprop="name headline">{{ post.description }}</p>
-							<p class="post-sample">{{ post.content | truncatewords: 30, '...' | strip_html | strip_newlines }}</p>
-							<div class="post-tags-box">
-								{%- for tag in post.tags -%}
-									<span class="badge badge-primary post-tag">{{ tag }}</span>
-								{%- endfor -%}
-							</div>
-						</div>
-					</div>
-				</div>
-			</li>
-			{%- endfor -%}
-		</div>
-	</ul>
-	{%- endif -%}
+    {%- include header.html -%}
 
-	<h2 class="home-subtitle">🚀 최근 프로젝트</h2>
-	{%- if projectPostArray.size > 0 -%}
-	<ul class="post-list">
+    <main class="page-content" aria-label="Content">
+      <div class="container">
+            {{ content }}
+      </div>
+    </main>
 
-		<div class="row">
-			{%- for post in projectPostArray limit:6 -%}
-			<li class="post-part col-lg-6">
-				<div class="post-info post-card" onclick='document.location.href="{{ post.url | relative_url }}"'>
-					<div class="card">
-						<div class="card-img-top">
-							<img class="card-img-top card-img" src="/assets/img/head-img/{{ post.headerImg }}"/>
-						</div>
-						<div class="card-body">
-							<p class="post-category p-name" itemprop="name headline">
-								{%- if post.categories[0] == 'Lib' or post.categories[0] == 'Dev' or post.categories[0] == 'Tech' -%}
-									<a href="/DevNote">개발노트</a> / {{ post.categories[0] }}
-								{%- elsif post.categories[0] == 'Games' or post.categories[0] == 'Web' -%}
-									<a href="/Project">프로젝트</a> / {{ post.categories[0] }}
-								{%- else -%}
-									/ {{ post.categories[0] }}
-								{%- endif -%}
-							</p>
-							<p class="post-title p-name" itemprop="name headline">{{ post.title | escape }}</p>
-							<p class="post-subtitle p-name" itemprop="name headline">{{ post.description }}</p>
-							<p class="post-sample">{{ post.content | truncatewords: 30, '...' | strip_html | strip_newlines }}</p>
-							<div class="post-tags-box">
-								{%- for tag in post.tags -%}
-									<span class="badge badge-primary post-tag">{{ tag }}</span>
-								{%- endfor -%}
-							</div>
-						</div>
-					</div>
-				</div>
-			</li>
-			{%- endfor -%}
-		</div>
-	</ul>
-	{%- endif -%}
-</div>
+    {%- include footer.html -%}
+
+  </body>
+  
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  {%- include script.html -%}
+<script>
+	
+var app = new Vue({
+	el: '#app',
+	delimiters: ['${', '}'],
+	data: {
+		myRepos: []
+	},
+	created() {
+		this.loadRepoData();
+	},
+	methods: {
+		getRepoData: function(url) {
+			console.log(url);
+			$.ajax({
+				method: "GET",
+				url: `https://api.github.com/repos/${url}`,
+			}).then((res) => {
+				this.myRepos.push({
+					name: res.name,
+					url: res.full_name,
+					desc: res.description,
+					stars: res.stargazers_count
+				});
+			});
+		},
+		loadRepoData: function() {
+			$.ajax({
+				method: "GET",
+				url: "../data/repos.json"
+			}).then((res) => {
+				console.log(res);
+				console.log(typeof res);
+				// res.foreach(repo => this.getRepoData(repo.url));
+				res.forEach(repo => {
+					this.getRepoData(repo.url)
+				});
+				// Array.from(res).foreach(repo => this.getRepoData(repo.url));
+			});
+		},
+		openNewPage: function(url) {
+			if (url == '') {
+				this.showAlertBox();
+			}
+			else
+				window.open("https://github.com/" + url, "_blank");
+		},
+	}
+})
+</script>
+</html>
