--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -155,6 +155,9 @@
 }
 
 .home {
+	.home-subtitle {
+		font-size: 1.75rem;
+	}
 	.post-part {
 		.post-title {
 			text-overflow: ellipsis;
@@ -364,7 +367,16 @@
 		font-size: 0.875rem;
 		margin-top: 1.125rem;
 		margin-bottom: 1.125rem;
+		padding-right: 2rem;
+		padding-left: 2rem;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
 		opacity: .8;
+		@include media("(max-width: 768px)") {
+			margin-top: 1rem;
+			margin-bottom: 1rem;
+		}
 	}
 	.post-nav-subtitle {
 		font-size: .75rem;
@@ -639,3 +651,87 @@
 	}
 }
  
+.recent-list {
+    margin-bottom: 120px;
+}
+
+$repoBGList: #EA816E, #F6CC5C, #659BF3, #BDD98E, #F08BDB, #AA7DFE;
+.repo-col {
+	overflow: hidden;
+	.repo-card{
+		height: 180px;
+		padding: 1rem 1.5rem;
+		border-radius: 1.5rem;
+		margin-bottom:  1rem;
+		// background: #ffd6c0;
+		color: white;
+		cursor: pointer;
+		.repo-name {
+			font-size: 1.5rem;
+			font-weight: bold;
+			color: white;
+		}
+		.repo-desc {
+			font-size: 1rem;
+			margin-bottom: 0px;
+		}
+		.repo-star {
+			display: flex;
+			font-size: 1rem;
+			text-align: right;
+			margin-bottom: 6px;
+			justify-content: flex-end;
+			align-items: center;
+			.icon {
+				width: 1rem;
+				height: 1rem;
+				margin-right: .25rem;
+			}
+		}
+
+		@each $bg in $repoBGList {
+			$idx: index($repoBGList, $bg);
+			&.repo-#{$idx} {
+				background-color: $bg;
+			}
+		}
+		&::before {
+			content: ' ';
+			top: -1.5rem;
+			right: -1.5rem;
+			width: 7rem;
+			height: 7rem;
+			display: inline-block;
+			position: absolute;
+			border-radius: 50%;
+			background-color: white;
+			opacity: .1;
+			z-index: 100;
+			transition: all ease .5s;
+		}
+		&::after {
+			content: ' ';
+			bottom: -3rem;
+			right: 0;
+			width: 10rem;
+			height: 10rem;
+			display: inline-block;
+			position: absolute;
+			border-radius: 50%;
+			background-color: white;
+			opacity: .1;
+			z-index: 100;
+			transition: all ease .5s;
+		}
+		&:hover {
+			&::before {
+				width: 8rem;
+				height: 8rem;
+			}
+			&::after {
+				width: 11rem;
+				height: 11rem;
+			}
+		}
+	}
+}
