태그 검색 기능

--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -27,7 +27,7 @@ html[data-theme='dark'] {
 			background-color: darken(#3e3b42, 10%) !important;
 		}
 	}
-	.btn {
+	.btn.btn-transparent {
 		background: none;
 		&.icons,
 		&.next-page-btn {
