--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -2,6 +2,9 @@
 $background: #ffffff;
 $themeColor: #B897FF;
 $themeColorOpa: #6BC59C;
+// Resume
+$resumeColor: #acbaee;
+$resumeText: #555555;
 
 // Colors
 $bold-black: #212529;
