fix: resume 수상, 활동

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -11,6 +11,7 @@
 			checkbox.checked = true;
 		}
 
+		if (checkbox)
 		checkbox.addEventListener('change', function () {
 			if (this.checked) {
 				trans();
