--- a/_sass/jebl/_resume.scss
+++ b/_sass/jebl/_resume.scss
@@ -223,7 +223,7 @@ $border: #acbaee;
 	font-weight: 500;
 	text-decoration: underline;
 	// text-decoration-style: wavy;
-	text-decoration-color: $resumeColor;
+	text-decoration-color: #acbaee75;
 	text-decoration-thickness: 1px;
 }
 
