fix: 포트폴리오 내용을 포스팅으로 변경

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 				<a class="quick-menu" href="/">홈</a>
 				<a class="quick-menu" href="/DevNote">개발노트</a>
 				<a class="quick-menu" href="/Project">프로젝트</a>
-				<a class="quick-menu" href="/about">소개</a>
+				<a class="quick-menu" href="/resume" >소개</a>
 			</div>
 		</div>
 	</div>
