--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 				   class="nav-link align-self-center active" 
 				   {% endif %} 
 				   class="nav-link align-self-center">프로젝트</a>
-				<a href="{{ '/about' | prepend: site.baseurl }}/" 
+				<a href="{{ '/resume' | prepend: site.baseurl }}/" 
 				   {% if curPage[1] == "about" %} 
 				   class="nav-link align-self-center active" 
 				   {% endif %} 
