--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -287,6 +287,7 @@
 }
 
 .post {
+	&.post-pd {
 	padding-left: 180px;
 	padding-right: 180px;
 	@include media("(max-width: 1200px)") {
@@ -301,6 +302,8 @@
 		padding-left: 0px;
 		padding-right: 0px;
 	}
+		
+}
 	.quick-bar {
 		position: fixed;
 		top: 250px;
@@ -469,7 +472,7 @@
 	&.post-card {
 		@include media("(min-width: 768px)") {
 			cursor: pointer;
-			opacity: 0.7;
+			opacity: 0.8;
 			&:hover {
 				// margin-left: 10px;
 				opacity: 1;
