fix: resume print

--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -108,7 +108,10 @@ ol {
 ul {
     font-size: $p-size;
     padding-left: 20px;
-	list-style: none;
+	// list-style: none;
+	&:not(.origin-ul) {
+		list-style: none;
+	}
     li {
         margin-bottom: 5px;
 		font-weight: $notosans-thin;
