--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -6,7 +6,7 @@
   <body>
  
 
-    <main class="page-content" aria-label="Content">
+    <main class="page-content" aria-label="Content" style="padding-bottom: 0px;">
       <div class="container container-resume">
             {{ content }}
       </div>
