--- a/_sass/jebl/_resume.scss
+++ b/_sass/jebl/_resume.scss
@@ -342,6 +342,12 @@ $border: #acbaee;
 		margin-top: 14rem;
 	}
 }
+.print-empty-voicehub {
+	@media print {
+		width: 100%;
+		margin-top: 4rem;
+	}
+}
 .info-log {
 	margin-bottom: 0.675rem;
 }
